Fixed layout problem
Fixed layout problem

--- a/css/ka.css
+++ b/css/ka.css
@@ -105,6 +105,18 @@ footer p {
             padding-left: 60px;
             font-size: 30px;
         }
+
+        h1 {
+            text-align: center;
+            font-size: 50px;
+            margin-top: 70px;
+        }
+    
+        h2 {
+            margin-top: 80px;
+            margin-bottom: 100px;
+            font-size: 80px;
+        }
     
 
     footer {
